# MLOPS

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  supervisord.conf  train.py  validate_quality.py
.github/workflows/: ml_pipeline.yml
mlruns/0/: meta.yaml
mlruns/0/351b718aa9214cea853099f2236e3e7b/: meta.yaml
mlruns/0/351b718aa9214cea853099f2236e3e7b/tags/: mlflow.runName  mlflow.source.git.repoURL
mlruns/0/47ab9303b88a436ebba67ba98de376bd/: meta.yaml
mlruns/0/47ab9303b88a436ebba67ba98de376bd/params/: lr
mlruns/0/47ab9303b88a436ebba67ba98de376bd/tags/: mlflow.runName
mlruns/0/48f340093e8143c892a280b25b09fa18/: meta.yaml
mlruns/0/48f340093e8143c892a280b25b09fa18/tags/: mlflow.runName
mlruns/0/50eedf5c5386430dbd1bbf38cfbcdcd0/: meta.yaml
mlruns/0/50eedf5c5386430dbd1bbf38cfbcdcd0/tags/: mlflow.runName
mlruns/0/5947e36b728b426b8c8e358c07bcc586/: meta.yaml
mlruns/0/5947e36b728b426b8c8e358c07bcc586/tags/: mlflow.runName  mlflow.source.name
mlruns/0/6d68828142d44d7ea3397885ddecc76c/: meta.yaml
mlruns/0/6d68828142d44d7ea3397885ddecc76c/tags/: mlflow.runName
mlruns/0/9779fda4e6d043258cca6669fce929a4/: meta.yaml
mlruns/0/b9419df7bc1b4afc903e6a52212d1208/: meta.yaml
mlruns/0/b9419df7bc1b4afc903e6a52212d1208/tags/: mlflow.runName
mlruns/0/c016f50b505b4252bca2342434aa0291/: meta.yaml
mlruns/0/c016f50b505b4252bca2342434aa0291/tags/: mlflow.runName
mlruns/0/d9d9ddc3f9c04108987ef063af9b8a2c/: meta.yaml
mlruns/0/d9d9ddc3f9c04108987ef063af9b8a2c/tags/: mlflow.runName  (+1 more)
src/: MLproject  conda.yaml  entrypoint.sh  train.py
